--- a/client/EpicPMS/src/app/app.component.html
+++ b/client/EpicPMS/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="mainGrid">
   
   <div class="a0">
-    Header
+    <h1 class="header">Epic Property Managment</h1> 
   </div>
   
 
@@ -19,6 +19,13 @@
 
   <div class="a4">
     footer
+  </div>
+
+  <div class="a1">
+    <button class="b1 btn-success" type="button" (click)="dothis()">1 Beds</button>
+    <button class="b1 btn-success" type="button">2 Beds</button>
+    <button class="b1 btn-success" type="button">3 Beds</button>
+    
   </div>
 
  
